--- a/uno12/uno12.vcxproj
+++ b/uno12/uno12.vcxproj
@@ -38,7 +38,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <NMakeIncludeSearchPath>..;.;d:\leo_work\lib_visualgdb\arm-eabi\include\c++\6.2.0;d:\leo_work\lib_visualgdb\arm-eabi\include\c++\6.2.0\arm-eabi\thumb\cortex_m4;d:\leo_work\lib_visualgdb\arm-eabi\include\c++\6.2.0\backward;d:\leo_work\lib_visualgdb\lib\gcc\arm-eabi\6.2.0\include;d:\leo_work\lib_visualgdb\lib\gcc\arm-eabi\6.2.0\include-fixed;d:\leo_work\lib_visualgdb\arm-eabi\sys-include;d:\leo_work\lib_visualgdb\arm-eabi\include;BSP\STM32F4xxxx\STM32F4xx_HAL_Driver\Inc;$(NMakeIncludeSearchPath)</NMakeIncludeSearchPath>
+    <NMakeIncludeSearchPath>..;.;BSP\STM32F4xxxx\STM32F4xx_HAL_Driver\Inc;BSP\STM32F4xxxx\STM32F4xx_HAL_Driver\Inc\Legacy;BSP\STM32F4xxxx\CMSIS_HAL\Device\ST\STM32F4xx\Include;BSP\STM32F4xxxx\CMSIS_HAL\Device\ST\STM32F4xx\Include\t;BSP\STM32F4xxxx\CMSIS_HAL\Include;d:\leo_work\lib_visualgdb\arm-eabi\include\c++\6.2.0;d:\leo_work\lib_visualgdb\arm-eabi\include\c++\6.2.0\arm-eabi\thumb\cortex_m4;d:\leo_work\lib_visualgdb\arm-eabi\include\c++\6.2.0\backward;d:\leo_work\lib_visualgdb\lib\gcc\arm-eabi\6.2.0\include;d:\leo_work\lib_visualgdb\lib\gcc\arm-eabi\6.2.0\include-fixed;d:\leo_work\lib_visualgdb\arm-eabi\sys-include;d:\leo_work\lib_visualgdb\arm-eabi\include;$(NMakeIncludeSearchPath)</NMakeIncludeSearchPath>
     <NMakeForcedIncludes>$(ProjectDir)\gcc_Debug.h;$(VISUALGDB_DIR)\gcc_compat.h;BSP\stm32_compat.h;$(NMakeForcedIncludes)</NMakeForcedIncludes>
     <NMakeBuildCommandLine>"$(VISUALGDB_DIR)\VisualGDB.exe" /build "$(ProjectPath)" "/solution:$(SolutionPath)" "/config:$(Configuration)" "/platform:$(Platform)"</NMakeBuildCommandLine>
     <NMakeCleanCommandLine>"$(VISUALGDB_DIR)\VisualGDB.exe" /clean "$(ProjectPath)" "/solution:$(SolutionPath)" "/config:$(Configuration)" "/platform:$(Platform)"</NMakeCleanCommandLine>
@@ -137,6 +137,7 @@
     <ClCompile Include="system_stm32f4xx.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BSP\STM32F4xxxx\CMSIS_HAL\Device\ST\STM32F4xx\Include\stm32f427xx.h" />
     <ClInclude Include="BSP\STM32F4xxxx\CMSIS_HAL\Device\ST\STM32F4xx\Include\stm32f4xx.h" />
     <ClInclude Include="BSP\STM32F4xxxx\CMSIS_HAL\Device\ST\STM32F4xx\Include\system_stm32f4xx.h" />
     <ClInclude Include="BSP\STM32F4xxxx\CMSIS_HAL\Device\ST\STM32F4xx\Include\t\stm32f302x8.h" />
