--- a/uno12/uno12.vcxproj
+++ b/uno12/uno12.vcxproj
@@ -245,6 +245,7 @@
     <ClInclude Include="stm32f4xx_hal_conf.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram.cd" />
     <None Include="debug.mak" />
     <None Include="Makefile" />
     <None Include="release.mak" />
