--- a/uno12/uno12.vcxproj.filters
+++ b/uno12/uno12.vcxproj.filters
@@ -580,6 +580,7 @@
     <None Include="stm32.mak">
       <Filter>Source files\Device-specific files</Filter>
     </None>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="stm32.xml">
