--- a/uno12/uno12.vcxproj.filters
+++ b/uno12/uno12.vcxproj.filters
@@ -587,6 +587,7 @@
       <Filter>Source files\Device-specific files</Filter>
     </None>
     <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup>
     <Xml Include="stm32.xml">
